[project]
name = 'metabot'
version = '0.3.22'
description = 'Modularized, multi-account bot.'
readme = 'README.md'
authors = [
    {name = 'Daniel Reed', email = 'nmlorg@gmail.com'},
]
requires-python = '>=3.8'
dependencies = [
    'googlemaps',
    'ntelebot >= 0.3.4',
    'pytz',
    'PyYAML >= 5.1',
    'requests',
]

[project.optional-dependencies]
dev = [
    'pylint',
    'pytest-cov',
    'pytest',
    'requests-mock',
]

[project.scripts]
metabot = 'metabot.__main__:main'

[project.urls]
Homepage = 'https://github.com/nmlorg/metabot'
Issues = 'https://github.com/nmlorg/metabot/issues'

[tool.pylint.'MESSAGES CONTROL']
disable = [
    'consider-using-f-string',
    'consider-using-ternary',
    'consider-using-with',
    'duplicate-code',
    'inconsistent-return-statements',
    'unnecessary-lambda-assignment',
    'unspecified-encoding',
    'use-implicit-booleaness-not-comparison',
]

[tool.pytest.ini_options]
addopts = '-rN --cov=metabot --cov-report=html'
consider_namespace_packages = true
testpaths = ['metabot']
verbosity_assertions = 2

[tool.setuptools.packages.find]
include = ['metabot', 'metabot.*']

[tool.yapf]
based_on_style = 'google'
column_limit = 100
